<resources>
    <string name="app_name">MTA Perfect Fare</string>

    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="dollar_sign">$</string>
    <string name="total_text_view">Total</string>
    <string name="savings_textview">Savings</string>
    <string name="regular_saving_label_textview">Regular:</string>
    <string name="weekly_saving_label_textview">Weekly:</string>
    <string name="monthly_saving_label_textview">Monthly:</string>
    <string name="buy_monthly_metrocard">Buy a Monthly Metrocard</string>
    <string name="buy_weekly_metrocard">Buy a Weekly Metrocard</string>
    <string name="time_s">Time(s)</string>
    <string name="buy_specific_weekly">Every Week, Buy a\n</string>
    <string name="metrocard">Metrocard</string>
    <string name="put">Put</string>
    <string name="into_your_card">into your card.</string>
    <string name="drawer_open_desc">open</string>
    <string name="drawer_close_desc">close</string>
    <string name="if_savings"><u>If you bought</u></string>
    <string name="if_savings_results"><u>You\'d waste</u></string>
    <string name="starting_balance_text_view">Starting Balance</string>
    <string name="starting_balance_hint">How much money is in your card?</string>
    <string name="swipes_text_view">Swipes</string>
    <string name="swipes_hint">How many swipes per day?</string>
    <string name="days_hint">How many days of travel per week?</string>
    <string name="days_text_view">Days</string>
    <string name="weeks_text_view">Weeks</string>
    <string name="weeks_hint">How many weeks of travel per month?</string>
    <string name="navbar_image_content_description">Navigation Bar background image</string>
    <string name="activity_results_title">Results</string>
    <string name="app_purpose_question">Why does this app exist?</string>
    <string name="app_purpose">The MTA makes it really difficult for frugal people to make smart metrocard
        purchases. The arbitrary bonus value added onto your card frustrates many people as they now have an excess
        amount of money stored in their card, money that could have been kept in their wallets.</string>
    <string name="activity_about_title">About</string>
    <string name="activity_contact_title">Contact</string>
    <string name="contact_questions">Got an idea to improve this app?\nDon\'t like something?\nQuestions?</string>
    <string name="email_developer">Email the developer</string>
    <string name="about_me_question">Who are you?</string>
    <string name="about_me">I\'m just an average broke college student trying to make commuting in my city easier and less stressful.</string>
    <string name="metrocard_info_question">Want to learn more about Metrocards?</string>
    <string name="mta_website_button">Official MTA Website</string>
</resources>
